Adds swagger.json to .ts parsers for clients,. enums and classes.
