# Hivemind.Ng/templates/entities/GangTerritory.ts
@@ -1,0 +1,7 @@
+import { Territory } from './Territory';
+
+export class GangTerritory {
+    public gangTerritoryId: string;
+    public gangId: string;
+    public territory: Territory;
+}
